update link to show
